[package]
name = "Hihi"
version = "0.2.0"
author = "Richard Vade"
licensed = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.0"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num_enum = "0.5.1"
num-integer = "0.1.44"
num-traits = "0.2"
thiserror = "1.0"
solana-program = "=1.7.11"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
